--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -82,7 +82,7 @@ jobs:
       with:
         test-name: testGetAverageCol
         setup-command: ''
-        command: gradle test --test MatrixManipulatorTest.testGetAverageCol
+        command: gradle test --tests MatrixManipulatorTest.testGetAverageCol
         timeout: 1
         max-score: 1
     - name: testGetAverageColEmptyMatrix
